--- a/less/events.less
+++ b/less/events.less
@@ -71,7 +71,9 @@
 			}
 			h4 {
 				font-size: 1.5em;
-				line-height: 1.3em;
+				line-height: 1.1em;
+				padding-top: 3px;
+				margin-bottom: 3px;
 				.font-serif-heavy;
 				> i {
 					color: #ccc;
